[BUGFIX] Arreglados diversos errores de Sonar. refs #4411 @1h